--- a/atm/app/views/layouts/application.html.erb
+++ b/atm/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Atm</title>
+  <title>Atm - API Client</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -9,6 +9,10 @@
 <body>
   
 <div class="container">
+
+  <div class="page-header">
+    <h1>ATM <small>[API Client]</small></h1>
+  </div>
 
   <div id="flash_notice" class="center"></div>
 
